src/components/Sections/styles.module.css
/* Overrides */
p {
  text-align: justify;
}


/* Generics */
.centerText {
  text-align: center;
}
.dottedUnderline {
  text-decoration: underline;
  text-decoration-style: dotted;
  text-decoration-color: var(--ifm-color-primary);
  text-decoration-thickness: 0.23rem;
  text-underline-position: under;
}
.nobold {
  font-weight: normal
}
.spacedList > li {
  margin: 10px 0
}


/* Introduction > Intro */
.mySubtitle {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  align-items: baseline;
  justify-content: space-around;
}


/* Introduction > Applications */
.wrapList {
  display: flex;
  place-content: center;
}
@media only screen and (max-width: 450px) and (min-width: 375px) {
  div.wrapList {
    display: block;
  }

  div.wrapList > ul {
    display: flex;
    flex-flow: column wrap;
    padding-inline-start: 0px;
    max-height: 20vh;
    align-content: space-between;
    max-width: 300px;
  }
}


/* Introduction > Limitations */
@media only screen and (max-width: 1000px) {
  .reverseRow {
    flex-direction: column-reverse;
  }
}


/* Taxonomy */
.myhide,
.myhide > *,
.myhide > * > *,
.myhide > * > * > * {
  opacity: 0;
  left: -100%;
  height: 0;
  margin: 0;
  display: none;
}


/* Taxonomy Graph */
.taxonomyRow {
  margin: 50px 0;
  display: flex;
  justify-content: space-between;
}
.taxonomyCol {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 25%;
}
.taxonomyPad {
  z-index: 0;
  background-color: #FFF;
}
/* Pad blocks only on big screens */
@media only screen and (min-width: 600px) {
  .taxonomyPad > * {
    padding: calc( var(--ifm-button-padding-vertical) * var(--ifm-button-size-multiplier) ) calc( var(--ifm-button-padding-horizontal) * var(--ifm-button-size-multiplier) );
  }
}
.blockText {
  text-align: center;
  margin: 0;
  word-break: break-word;
}
/* Small screens adjustements */
@media only screen and (max-width: 600px) {
  .taxonomyRow {
    margin: 10px 0;
    display: flex;
    justify-content: space-between;
  }
  .blockText {
    font-size: 0.8rem;
  }
  .taxonomyPad > * {
    padding: 0.6rem 0;
    border-left-width: 10px;
    border-style: solid;
    z-index: 1;
    background-color: #FFF;
  }
  [data-theme='dark'] .taxonomyPad > * {
    background-color: var(--ifm-background-color);
  }
  .taxonomyPad > div {
    border-color: transparent;
  }
  .taxonomyCol {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 30%;
  }
}
[data-theme='dark'] .taxonomyPad {
  background-color: var(--ifm-background-color);
}
.taxonomyGroup {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
} 
.taxonomyLink {
  text-decoration: none;
  text-align: center;
  display: flex;
  border-style: solid;
  border-color: transparent;
}
/* inverse text color */
.taxonomyLink:hover {
  text-decoration: none;
  border-color: var(--ifm-button-border-color);
}
.taxonomyOn {
  border-color: var(--ifm-button-border-color);
}
.taxonomyOff {
  border-color: transparent;
}


/* Approaches */
.octocatTitle {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  justify-content: space-between;
  flex-wrap: nowrap;
}
.octocat > a > img {
  max-height: calc(var(--ifm-h2-font-size) *2);
}


/* Approaches > Statistical*/
.twoImagesContainer {
  width: 100%;
  /*height: 80px; /* height given for illustration */
  display: flex;
  flex-flow: row nowrap;
  position: relative;
  justify-content: center;
}
.twoImagesContainer > * {
  max-width: 50%;
  padding: 0 0.5rem 0 0.5rem;
  max-height: 250px;
}


/* Approaches > U-Net */
.threeImagesContainer {
  width: 100%;
  /*height: 80px; /* height given for illustration */
  display: flex;
  flex-flow: row nowrap;
  position: relative;
  justify-content: space-between;
}
.threeImagesContainer > * {
  max-width: 33%;
}
.smallPadding * {
  padding: 0 0.2rem 0.4rem 0.2rem
}


/* Bibliography */
.bibWrapper {
  padding-right: 1rem !important;
  padding-left: 0 !important;
}
.bibWrapper > ol {
  padding-left: 1.2rem !important;
}


/* Theming */
[data-theme='dark'] .invert > img,
[data-theme='dark'] .invert > * > img {
  filter: invert(100%);
}

